pihole/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
    name: pihole

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
      task: pihole
  template:
    metadata:
      labels:
        app: pihole
        task: pihole
    spec:
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: dnsmasq
      containers:
        - name: pihole
          image: pihole/pihole:latest
          volumeMounts:
            - mountPath: /etc/pihole/
              name: pihole
            - mountPath: /etc/dnsmasq.d/
              name: dnsmasq
          resources:
            limits:
              cpu: "0.1"
              memory: 300Mi
          ports:
            - containerPort: 80
            - containerPort: 53
            - containerPort: 67
            - containerPort: 80
