pihole/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole
  namespace: pihole
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: pihole.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
